--- a/Examen_C1_Manel_Gonzalez_Huete.ipynb
+++ b/Examen_C1_Manel_Gonzalez_Huete.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "cloZyrO8u1uY"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "1cMYBy5mu1uZ"
       },
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "2R-_C_sCu1uZ",
         "outputId": "72fd7b93-359e-4536-8a8c-44e3436a5f93",
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "0ycUdxpau1uZ",
         "outputId": "e87210a7-5248-47fc-fd24-9677ce96054c",
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "0dByedl1u1ua",
         "outputId": "15c3e622-5cf6-40f5-8677-5d96230767a5",
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "213oLo8Pu1ua",
         "outputId": "8653529e-ff23-4529-d1b1-f622b4a88f32",
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "_mY5ot0Zu1ua",
         "outputId": "a709bc4d-f95c-47bb-d6f6-c8e5b8747baf",
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "PSjxApO2u1ua",
         "outputId": "99c5198c-9a95-499f-dcb9-a3b2f057b8ea",
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "7YxJmRgju1ub",
         "outputId": "da3f3756-0f85-4799-b847-088568bbdd52",
@@ -470,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "5bLiXqXHu1ub",
         "outputId": "f6c538d4-1c2e-4da0-d38c-a2e28f6007e3",
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "uOnbSN_0u1ub",
         "outputId": "9df65e55-3371-448d-b16b-86e6b109fd73",
@@ -652,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "WyhUhqr3u1ub",
         "outputId": "e95360cb-fa08-430d-b06f-c2e5224fb44c",
@@ -745,7 +745,7 @@
         "\n",
         "De los modelos: Regresión Logística y Support Vector Machine, el que pondría en producción es el SVM. Aunque uno de sus inconvenientes es el coste computacional, en volúmenenes elevados de datos, en éste no parece que sea el caso, el volumen de registros y atributos es reducido. Por otro lado como se ve en la curva ROC la del SVM y área AUC son mucho mejores a las de LOGR. Adicionalmente **todas** las metricas el modelo SVM son muy superiores a las del LOGR, tanto Precisión (0.820 vs 0.670), como Exactitud (0.818 vs 0.666), como F1 (0.817 vs 0.666) ... Sobretodo sobresale en los falsos negativos que SVM tiene 7 contra los 20 de LOGR.\n",
         "\n",
-        "SVM ha pertido solventar algún problema de solape de las etiquetas, pues al utilizar el algoritmo sin el parámetro \"C\" el Accuracy fue de 0.791 frente a los 0.816 con un \"C=10\"\n",
+        "El modelo SVM ha permitido solventar algún problema de solape en las etiquetas, pues al utilizar el algoritmo sin el parámetro \"C\" el Accuracy fue de 0.791 frente a los 0.816 con un \"C=10\"\n",
         "\n",
         "Si por el contrario el entorno que se ha de poner en producción requiere gran rapidez, simplicidad y muy alta escalabilidad, pues se supone que el volumen de datos crecerá mucho (y no se requiere un exactitud muy elevada), la regresión logística sería la mejor opción. Si como hemos presentado el entorno requiere mayor precisión, no crecerá el volumen de datos y éstos serán complejos, SVM sería el seleccionado, siendo conscientes del mayor tiempo de entrenamiento y posiblemente mayor consumo de recursos.\n",
         "\n",
