--- a/RL_Proyecto_práctico_Grupo1_C.ipynb
+++ b/RL_Proyecto_práctico_Grupo1_C.ipynb
@@ -94,7 +94,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "#Si ya tenemos lasa librerías cargadas desde requirements.txt --> false\n",
+        "INSTALL_LOCAL = False\n",
+        "\n",
+        "IN_COLAB_3_8  = True\n",
+        "IN_COLAB_3_11 = False"
+      ],
+      "metadata": {
+        "id": "wn9-lDdU8vhM"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if IN_COLAB_3_8:\n",
+        "  import shutil\n",
+        "  import sys\n",
+        "  import os\n",
+        "  # 1. Instalar miniconda\n",
+        "  # Esto nos proporciona un potente gestor de entornos\n",
+        "  !pip install -q condacolab\n",
+        "  import condacolab\n",
+        "  condacolab.install()\n",
+        "\n",
+        "  ## Después de instalar condacolab, se necesita REINICIAR\n",
+        "  os.kill(os.getpid(), 9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wsRyE8588zhh",
+        "outputId": "6bdcc081-914e-43d8-9f9f-042768cd79f8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⏬ Downloading https://github.com/jaimergp/miniforge/releases/download/24.11.2-1_colab/Miniforge3-colab-24.11.2-1_colab-Linux-x86_64.sh...\n",
+            "📦 Installing...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Si ya tenemos lasa librerías cargadas desde requirements.txt --> false\n",
+        "INSTALL_LOCAL = False\n",
+        "\n",
+        "IN_COLAB_3_8 = True\n",
+        "IN_COLAB_3_11 = False"
+      ],
+      "metadata": {
+        "id": "HELsr-8j9Ijs"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if IN_COLAB_3_8:\n",
+        "  import shutil\n",
+        "  import sys\n",
+        "  import os\n",
+        "  # 1. Instalar miniconda\n",
+        "  # Esto nos proporciona un potente gestor de entornos\n",
+        "  !pip install -q condacolab\n",
+        "  import condacolab\n",
+        "  condacolab.install()\n",
+        "\n",
+        "  ## Después de instalar condacolab, se necesita REINICIAR\n",
+        "  os.kill(os.getpid(), 9)"
+      ],
+      "metadata": {
+        "id": "9UWC-nZJ8-cH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "cw5W3OopAFKN"
       },
@@ -123,35 +210,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 222
         },
         "id": "3lN7KLe05NSa",
-        "outputId": "1fec1799-626e-4275-b509-c7bf02477b96"
+        "outputId": "b9189a62-0dd9-42cc-af1e-eb19f2f3a3d7"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Estamos ejecutando en Colab\n",
-            "Colab: montando Google drive en:  /content/gdrive\n",
-            "Mounted at /content/gdrive\n",
-            "\n",
-            "Colab: Asegurando que  /content/gdrive/My Drive/VIU/08_AR_MIAR/sesiones_practicas/sesion_practica_1  existe.\n",
-            "\n",
-            "Colab: Cambiamos el directorio a:  /content/gdrive/My Drive/VIU/08_AR_MIAR/sesiones_practicas/sesion_practica_1\n",
-            "/content/gdrive/My Drive/VIU/08_AR_MIAR/sesiones_practicas/sesion_practica_1\n",
-            "Archivos en el directorio: \n",
-            "['miar_rl']\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'IN_COLAB' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1-1973905840.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Cambiar al directorio en Google Drive que deseas usar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mIN_COLAB\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Estamos ejecutando en Colab\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'IN_COLAB' is not defined"
           ]
         }
       ],
       "source": [
         "# Cambiar al directorio en Google Drive que deseas usar\n",
-        "import os\n",
         "if IN_COLAB:\n",
         "  print(\"Estamos ejecutando en Colab\")\n",
         "\n",
@@ -187,53 +269,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# 1. Install miniconda\n",
-        "# This gives us a powerful environment manager\n",
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
-        "\n",
-        "# 2. Verify conda installation (optional)\n",
-        "import sys\n",
-        "print(sys.executable)\n",
-        "print(sys.version)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KZ2SRl_Iysgd",
-        "outputId": "d284ea42-d48a-4577-fb33-edb8a43f8a34"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/condacolab.py:320: DeprecationWarning: Use shutil.which instead of find_executable\n",
-            "  assert find_executable(\"conda\"), \"💥💔💥 Conda not found!\"\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "⏬ Downloading https://github.com/jaimergp/miniforge/releases/download/24.11.2-1_colab/Miniforge3-colab-24.11.2-1_colab-Linux-x86_64.sh...\n",
-            "📦 Installing...\n",
-            "📌 Adjusting configuration...\n",
-            "🩹 Patching environment...\n",
-            "⏲ Done in 0:00:14\n",
-            "🔁 Restarting kernel...\n",
-            "/usr/bin/python3\n",
-            "3.11.13 (main, Jun  4 2025, 08:57:29) [GCC 11.4.0]\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Después de instalar condacolab, se necesita REINICIAR"
@@ -244,122 +279,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.kill(os.getpid(), 9)"
-      ],
-      "metadata": {
-        "id": "ayvSG6ZF2i8T"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# --- Run this cell AFTER the runtime has restarted due to condacolab installation ---\n",
-        "\n",
-        "# 2. Create a new conda environment with Python 3.8\n",
-        "# We'll call it 'miar_rl'  --> Flag: -y answers yes to prompts\n",
-        "print(\"Creating conda environment 'miar_rl' with Python 3.8...\")\n",
-        "!conda create -n miar_rl python=3.8 -y -q\n",
-        "\n",
-        "# 3. Now, install your desired packages into the Python 3.8 conda environment\n",
-        "print(\"\\nInstalling packages into 'miar_rl'...\")\n",
-        "\n",
-        "# Get the path to the new environment's python and pip\n",
-        "python_path = \"/usr/local/envs/miar_rl/bin/python\"\n",
-        "pip_path = \"/usr/local/envs/miar_rl/bin/pip\"\n",
-        "\n",
-        "# Install TensorFlow 2.8.0 and Keras 2.8.0 (compatible with Python 3.8)\n",
-        "!{pip_path} install tensorflow==2.8.0 --quiet\n",
-        "!{pip_path} install keras==2.8.0 --quiet\n",
-        "# Install numpy (TF 2.8.0 is compatible with numpy up to ~1.23.x)\n",
-        "!{pip_path} install numpy==1.23.5 --quiet\n",
-        "# Install gym 0.17.3\n",
-        "!{pip_path} install gym==0.17.3 --quiet\n",
-        "# Install atari-py (make sure the URL is correct and accessible)\n",
-        "!{pip_path} install git+https://github.com/Kojoley/atari-py.git@1.2.2 --quiet\n",
-        "# Install keras-rl2\n",
-        "!{pip_path} install keras-rl2==1.0.5 --quiet\n",
-        "# Additional libraries\n",
-        "!{pip_path} install Pillow --quiet\n",
-        "!{pip_path} install matplotlib --quiet\n",
-        "!{pip_path} install tqdm --quiet\n",
-        "!{pip_path} install imageio imageio-ffmpeg --quiet # For video recording\n",
-        "\n",
-        "# 4. Verify installed versions in the NEW environment\n",
-        "print(\"\\n--- Verifying installed packages in 'tf28_env' ---\")\n",
-        "!{pip_path} list | grep -E 'tensorflow|keras|gym|numpy|keras-rl2|atari-py|imageio|imageio-ffmpeg|jax'\n",
-        "\n",
-        "# 5. Install ffmpeg system-wide for imageio\n",
-        "print(\"\\n--- Installing ffmpeg system-wide ---\")\n",
-        "!apt-get update --quiet\n",
-        "!apt-get install -y ffmpeg --quiet\n",
-        "\n",
-        "print(\"\\nSetup complete for 'tf28_env' with Python 3.8 and TensorFlow 2.8.0.\")\n",
-        "print(\"Remember to use the full path to the executables from 'tf28_env' in subsequent cells:\")\n",
-        "print(f\"  Python: {python_path}\")\n",
-        "print(f\"  Pip: {pip_path}\")"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GBYTs7S4zouq",
-        "outputId": "cbda2520-d3a6-44c5-94ae-0ea0d0707433"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Installing packages into 'miar_rl'...\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 222
         },
         "id": "AmVd8L9XBt26",
-        "outputId": "fbdb8781-d766-48bc-f719-fc7484e45b5e"
+        "outputId": "4239d542-5888-4167-fba5-edc070ed289b"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement install (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for install\u001b[0m\u001b[31m\n",
-            "\u001b[0mCollecting git+https://github.com/Kojoley/atari-py.git@1.2.2\n",
-            "  Cloning https://github.com/Kojoley/atari-py.git (to revision 1.2.2) to /tmp/pip-req-build-5wph_6wx\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/Kojoley/atari-py.git /tmp/pip-req-build-5wph_6wx\n",
-            "  Running command git checkout -q 78fc2cb27c5541792ca33249b68c5f853d2b5510\n",
-            "  Resolved https://github.com/Kojoley/atari-py.git to commit 78fc2cb27c5541792ca33249b68c5f853d2b5510\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement install (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for install\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement install (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for install\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement install (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for install\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'IN_COLAB_3_11' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2-1012453050.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mIN_COLAB_3_11\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mimport\u001b[0m \u001b[0mshutil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;31m# 1. Instalar virtualenv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip install virtualenv --quiet'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'IN_COLAB_3_11' is not defined"
           ]
         }
       ],
       "source": [
-        "#Si ya tenemos lasa librerías cargadas desde requirements.txt --> false\n",
-        "INSTALL_LOCAL = False\n",
-        "\n",
-        "IN_COLAB_3_8 = True\n",
-        "IN_COLAB_3_11 = False\n",
-        "\n",
         "if IN_COLAB_3_11:\n",
         "  import shutil\n",
         "  import sys\n",
@@ -391,6 +333,20 @@
         "if IN_COLAB_3_8:\n",
         "  import shutil\n",
         "  import sys\n",
+        "\n",
+        "  # 1. Instalar miniconda\n",
+        "  # Esto nos proporciona un potente gestor de entornos\n",
+        "  !pip install -q condacolab\n",
+        "  import condacolab\n",
+        "  condacolab.install()\n",
+        "\n",
+        "  ## Después de instalar condacolab, se necesita REINICIAR\n",
+        "  os.kill(os.getpid(), 9)\n",
+        "\n",
+        "  # 2. Verificar la instalación de conda (opcional)\n",
+        "  print(sys.executable)\n",
+        "  print(sys.version)\n",
+        "\n",
         "  # 1. Instalar virtualenv\n",
         "  !pip install virtualenv --quiet\n",
         "\n",
@@ -498,14 +454,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "K4o4-N4T43MO",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 403
         },
-        "outputId": "8a2053f3-3281-4b3e-f492-9a1717953b0c"
+        "outputId": "8fb42c0b-2c5f-45ee-860f-ee69e39ea663"
       },
       "outputs": [
         {
@@ -515,7 +471,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-6-3973158630.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtracemalloc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequentialMemory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mrl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdqn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDQNAgent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAbstractDQNAgent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1-3973158630.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtracemalloc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequentialMemory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mrl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdqn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDQNAgent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAbstractDQNAgent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rl'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
